# BioSim

./: LICENSE  LICENSE.txt  README _<Kim1>.md  README.md  README_<branch_mathias1>.md  new_README.md  setup.cfg  test.py  tox.ini
docs/: Animals.rst  Cell.rst  Graphics.rst  Island.rst  Simulation.rst  codedoc.rst  conf.py  examples.rst  further.rst  home.rst  index.rst
docs/html/: codedoc.html  examples.html  further.html  genindex.html  home.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_modules/: index.html
docs/html/_static/: documentation_options.js
examples/: Example 1.py  Example 2.py  sample_sim.py
scripts/: TODO.txt  check.py  check_cell.py  check_fitness.py  check_island.py  check_migrate.py  check_parameters.py  check_sim.py  error1.py  error2.py  error3.py  first_sim_herb.py  foo.py  graphic_2.py  graphic_check.py  graphics3.py  log_check.py  map.py  mono_ho.py  sample_sim.py  serial2_check.py  serial_check.py  sim_herb_v2.py
scripts/archive/: check_fitness.py  check_island.py  check_parameters.py  check_procreation.py  check_sim.py  first_sim_herb.py  fitness_profile.py  mono_hc.py  plot_weight.py  porfile_hal.py  profile_check.py  serial_check.py  sim_herb_v2.py
scripts/graphics/: foo.py  graphic_2.py  graphics3.py
src/biosim/: __init__.py  animals.py  cell.py  graphics.py  island.py  simulation.py
tests/: integral_test.py  old_cell_test.txt  old_test_animals.txt  test_animals.py  test_biosim_interface.py  test_cell.py  test_island.py  test_main.py  test_simulation.py  unfinished_test.txt
(+6 files in other folders)
