# Metadata: Information about the package, used by package managers.
[metadata]
name = biosim

# Obtain version and author info from package,
# usually defined in __init__.py
version = attr: biosim.__version__
author = attr: biosim.__author__

# Provide description, long version picked up from file.
description = A simulation of a simple ecosystem on a remote island
long_description = file: README.md
long_description_content_type = text/markdown

# License information
license = MIT License

# Homepage for package and specific URLs
url = https://gitlab.com/nmbu.no/emner/inf200/h2022/june-block-teams/u22_kim_mathias/biosim-u22-kim-mathias

# Classifiers, for options, see https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

# More information about requirements
[options]
# Python version required
python_requires = >=3.11

# Other packages required (eg numpy, pandas, ...)
# Do NOT list packages from the Python Standard Library
#    https://docs.python.org/3.11/library/index.html
install_requires =
    numpy
    scipy
    matplotlib

# Which packages to include: tell packaging mechanism to search in src
package_dir =
    = src
packages = find:

[options.packages.find]
where=src

[flake8]
max-line-length = 100
